# jdbg

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  gcovr.toml  meson.build  meson_options.txt
.github/workflows/: ci.yml
cmake/: AddCPack.cmake  AddCatch.cmake  AddCoverage.cmake  FindGCov.cmake  FindGCovr.cmake  FindLCov.cmake  FindLlvmCov.cmake  HandleBuildType.cmake  HandleVersion.cmake  SetupCoverage.cmake  jdbg.pc.in  jdbg_pch.hpp.in
examples/: CMakeLists.txt  main.cpp  meson.build
include/jdbg/: jdbg.hpp  pretty_print.hpp  reflect_struct.hpp  type_name.hpp
include/jdbg/detail/: map_macro.hpp  meta.hpp
tests/: CMakeLists.txt  jdbg_tests.cpp  meson.build  pretty_print_tests.cpp  reflect_struct_tests.cpp  type_name_tests.cpp
